# ChangeLog for dev-java/antlr
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 May 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
  Drop all keywords from antlr until all dependencies build

  24 Apr 2007; Miroslav Šulc <fordfrog@gentoo.org> antlr-3.0_beta7.ebuild:
  Corrected so it compiles in my case
