@@ -1,4 +1,6 @@
 AUX buildfixes.patch 760 RMD160 5f6e25ed4a62069ccdd081095e560aa3f82f5445 SHA1 e9994f24225a09fbb24cf58f6d36a53dac411035 SHA256 ecfa503e3b2178a71bed22d6f7beb4018b0abd08540c075a5074df57fce56737
+DIST antlr-3.0.tar.gz 3257540 RMD160 af76bfd32dfc90edf428b869b2e4a0d05966506c SHA1 007d1f723ec53d521687f22ae90af938df263b34 SHA256 2329bd44df7e7763ee6debcfacc80f9b7b026bcccfa1e816154fae7bbb84bddc
 DIST antlr-3.0b7.tar.gz 2778369 RMD160 f626c9e3f3c7c2215b4322fdfc064fcfdaa3f7a3 SHA1 4e53098c32ef0b3511e2ae66f6427f8dbd81b90b SHA256 32df2657be8a0b5393403236a20da104a2cc9289baa2f2b5ca2619e4f837d34f
+EBUILD antlr-3.0.ebuild 1731 RMD160 594eafd497b234852b2f3290b10f369b9be563a3 SHA1 7b6053b946039df58773f833bd34b93cb4212b3d SHA256 1e4590edef608759d92cb74856a89842bfdd7accea83f9558718ef493433f7ca
 EBUILD antlr-3.0_beta7.ebuild 1145 RMD160 0e29d2aebfa57ceb595f20d239f2429ac1a9a82a SHA1 1a89e65bd8458e04defc140524c9cb43b6b43b65 SHA256 0f82607f44321d24beff4c270f7cf9370bfad7c48b1bf890beb92d346c872483
-MISC ChangeLog 230 RMD160 ba342ea45b89bd6c4383f7126f7f6f621239b96d SHA1 52b6144e67637ec6d7b29cfa8a824097f2c38767 SHA256 5a2559ea7bb81e8e4a5cdc931ac2a4e5f4e746512d5b461392a7b877fb086ff6
+MISC ChangeLog 435 RMD160 606af2e73387632388432b0689e5f0f85e8f104a SHA1 75570c3de2e277154462531d850cadc024014eda SHA256 dfb31a3bce41b1d2fd47f71be9ce65379fe7e7bd780ff01ade6e6aec7b701c2a
