@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 May 2007; <serkan_kaba@yahoo.com> +antlr-3.0.ebuild:
+  Added antlr-3.0
+
   03 May 2007; Alistair John Bush <ali_bush@gentoo.org> ChangeLog:
   Drop all keywords from antlr until all dependencies build
 
